--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
   <link rel="stylesheet" href="main.css">
-  <title>XD</title>
+  <title>Todo List App</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg text-white bg-primary shadow">
